# saavi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cli.cpp  cli.h  file_iterators.cpp  file_iterators.h  key_index.h  saavi.cpp  saavi.h  saavi_exception.h
tests/: CMakeLists.txt  basic_test.cpp  benchmark.cpp  test_main.cpp
